# mocap_ros

./: LICENSE  README.md  package.xml  setup.cfg  setup.py
config/: bodies.yaml
launch/: mocap.launch.py
mocap_ros/: mocap_node.py
