<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mocap_ros</name>
  <version>1.0.0</version>
  <description>
    ROS 2 bridge for Qualisys Motion Capture system.
    Publishes TF transforms (and optionally Odometry) for any number of
    tracked rigid bodies, configured via a YAML file.
  </description>

  <maintainer email="timothee.carecchio@inria.fr">Timothée Carecchio</maintainer>
  <license>BSD-3-Clause</license>
  
  <depend>rclpy</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>

  <build_depend>ament_python</build_depend>
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
